--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+# vim swp files
 *.swp
+
+# dependencies 
 /server/node_modules/
 /client/node_modules/
+
+# security - environment variables
+**.env
