google and email-password authentication

--- a/client/.env.example
+++ b/client/.env.example
@@ -1,2 +1,2 @@
 REACT_APP_SERVER_CONNECTION_URL = <url where your backend(server) is running>
-
+REACT_APP_OAUTH_CLIENT_ID = <google auth client id>
